log
Sun 02 Jul 2023 03:32:53 AM UTC: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
f91a692
Sun 02 Jul 2023 03:33:09 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
015e370
Sun 02 Jul 2023 03:33:27 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
94eb630
Sun 02 Jul 2023 03:33:33 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
f920798
Sun 02 Jul 2023 03:33:58 AM UTC: 
 hashmap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:66:23: error: ‘key’ undeclared (first use in this function); did you mean ‘key_t’?
   66 |    long indice = hash(key, map -> capacity);
      |                       ^~~
      |                       key_t
hashmap.c:66:23: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:66:28: error: ‘map’ undeclared (first use in this function)
   66 |    long indice = hash(key, map -> capacity);
      |                            ^~~
hashmap.c:78:1: error: control reaches end of non-void function [-Werror=return-type]
   78 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3147778
Sun 02 Jul 2023 03:35:01 AM UTC: 
 hashmap.c | 17 +++++++----------
 1 file changed, 7 insertions(+), 10 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:75:1: error: control reaches end of non-void function [-Werror=return-type]
   75 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e32b43f
Sun 02 Jul 2023 03:35:21 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:76:1: error: control reaches end of non-void function [-Werror=return-type]
   76 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
95b1b84
Sun 02 Jul 2023 03:35:57 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
da84405
Sun 02 Jul 2023 03:36:41 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
aa1dc89
